--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,16 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+<footer class="bottom-footer">
+    <!-- <span class="mini-note">You've reached the end of the page. Good job!</span> -->
+    <!-- <nav class="sans">
+        <hr>
+        <p><label class="menu-icon" for="menu-btn">Menu</label></p>
+        <ul class="site-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/designs">Designs</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="https://canisee.xyz" title="Confirm your vision functionality">[Can I See]</a></li>
         </ul>
-      </div>
+    </nav> -->
 
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-    </div>
-  </div>
 </footer>
+
