--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,7 +1,7 @@
 
 
 <footer>
-  <a href="{{ site.baseurl }}/archive">← Back to all writings</a>
+  <a href="{{ site.baseurl }}/archive">← Back to all blogs</a>
   <!-- <nav class="sans">
     <hr>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
