--- a/assets/style.css
+++ b/assets/style.css
@@ -242,7 +242,7 @@ ul.blog-posts li span {
 }
 
 ul.blog-posts li a:visited {
-    color: #8b6fcb;
+    color: #DB0042;
 }
 
 /* discovery feed */
@@ -261,7 +261,7 @@ ul.discover-posts li span {
 }
 
 ul.discover-posts li a:visited {
-    color: #8b6fcb;
+    color: #DB0042;
 }
 
 ul.discover-posts li div {
