--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@ layout: compress
                     </time>
                 </i>
             </span>
-            <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="blog-title">{{ post.title }}</a>
         </li>
         {% endunless %}
         {% assign previous = post %}
