--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,7 +23,7 @@ layout: compress
             <span>
                 <i>
                     <time datetime="2022-01-28" pubdate="">
-                        {{ post.date | date: "%b %-d, %Y" }}
+                        {{ post.date | date: "%B %-d, %Y" }}
                     </time>
                 </i>
             </span>
