a little more revamp.

--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,6 +1,4 @@
 
-
 <footer>
-  <a href="{{ site.baseurl }}/archive" style="color:#DB0042;">← Back to all blogs</a>
-
+  <a href="{{ site.baseurl }}/archive" style="color:#e8ff26;">← Back to all posts</a>
 </footer>
