--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,4 +1,4 @@
 
 <footer>
-  <a href="{{ site.baseurl }}/archive" style="color:#e8ff26;">← Back to all posts</a>
+  <a href="{{ site.baseurl }}/archive">← Back to all posts</a>
 </footer>
