--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,8 @@ layout: compress
 
     {% include header.html %}
 
-    
-    <h1>{{ page.title }}</h1>
-    <i>{{ page.date | date: "%b %d, %Y" }}</i>
+    <span style="font-family: 'IBM Plex Mono', monospace;">{{ page.date | date: "%b %d, %Y" }}</span>
+    <h1 style="color:#e8ff26;">{{ page.title }}</h1>
     <h4 class="subtitle">{{ page.subtitle }}</h4>
 
     {{ page.content }}
