--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -24,7 +24,7 @@ layout: compress
                 <i>
                     <time datetime="2022-01-28" pubdate="">
                         {{ post.date | date: "%-d %b, %Y" }}
-                    </time>=
+                    </time>
                 </i>
             </span>
             <a href="{{ site.baseurl }}{{ post.url }}" class="blog-title">{{ post.title }}</a>
