--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: compress
 
     {% include header.html %}
 
-    <span style="font-family: monospace;">{{ page.date | date: "%-d %b, %Y" }}</span>
+    <p class="post-date">{{ page.date | date: "%-d %b, %Y" }}</p>
     <h1 style="color:#e8ff26;">{{ page.title }}</h1>
     <h4 class="subtitle">{{ page.subtitle }}</h4>
 
