--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,11 +8,9 @@ layout: compress
 
     {% include header.html %}
 
-    <p class="post-date">{{ page.date | date: "%-d %b, %Y" }}</p>
+    <p class="blog-date">{{ page.date | date: "%-d %b, %Y" }}</p>
     <h1 style="color:#e8ff26;">{{ page.title }}</h1>
-    <h4 class="subtitle">{{ page.subtitle }}</h4>
-
-    {{ page.content }}
+    <p class="blog-body">{{ page.content }}</p> 
 
 
 
