--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: compress
     {% include header.html %}
 
     <p class="blog-date">{{ page.date | date: "%-d %b, %Y" }}</p>
-    <h1 style="color:#e8ff26;">{{ page.title }}</h1>
+    <h1 class="blog-heading">{{ page.title }}</h1>
     <p class="blog-body">{{ page.content }}</p> 
 
 
